// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payouts Callback it can create a payout 1`] = `
Object {
  "body": Object {
    "id": "string",
    "payoutOutput": Object {
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "isCancellable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
    },
  },
  "isSuccess": true,
  "status": 201,
}
`;

exports[`Payouts Callback it can get a payout 1`] = `
Object {
  "body": Object {
    "id": "string",
    "payoutOutput": Object {
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "isCancellable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payouts Promises it can create a payout 1`] = `
Object {
  "body": Object {
    "id": "string",
    "payoutOutput": Object {
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "isCancellable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
    },
  },
  "isSuccess": true,
  "status": 201,
}
`;

exports[`Payouts Promises it can get a payout 1`] = `
Object {
  "body": Object {
    "id": "string",
    "payoutOutput": Object {
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "isCancellable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;
